Fix style for dark mode

--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -67,6 +67,14 @@
       margin-right: 4px;
     }
   }
+}
 
-
+@include dark {
+  .my-custom-search-bar {
+    // background-color: var(--strapi-dark-800);
+    // background-color: transparent;
+    background: var(--strapi-neutral-0);
+    border: var(--strapi-input-border);
+    color: var(--strapi-dark-100);
+  }
 }
